Horizontal scroll fixed

--- a/src/base.css
+++ b/src/base.css
@@ -14,6 +14,8 @@
 
 html {
   scroll-behavior: smooth;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 body {
